# identicon-rs

./: Cargo.toml  README.md
src/: hsl.rs  lib.rs  nibbler.rs  remap.rs
