[package]
name = "identicon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "identicon_rs"
path = "src/lib.rs"

[[bin]]
name = "identicon_rs"
path = "src/bin/bin.rs"

[dependencies]
image = { version = "0.24.6", default-features = false, features = ["png"]}
hmac-sha256 = "1.1.6"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3